p2/confs/mongo-deployement.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo-deployment
  labels: # option but good practice
    app: mongo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongo
  template:
    metadata:
      labels:
        app: mongo
    spec:
      containers:
      - name: mongo
        image: mongo:4.4.18
        ports:
        - containerPort: 27017
---
apiVersion: v1
kind: Service
metadata:
  name: mongo-service
spec:
  selector:
    app: mongo
  ports:
    - protocol: TCP
      port: 80 # this is what we want, this is the port to target the service
      targetPort: 27017 # this is the port to forward the request to the pod
