p2/confs/website-deployement.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: website-deployment
  labels: # option but good practice
    app: website
spec:
  replicas: 3
  selector:
    matchLabels:
      app: website
  template:
    metadata:
      labels:
        app: website
    spec:
      containers:
      - name: website
        image: nanajanashia/k8s-demo-app:v1.0
        ports:
        - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: website-service
spec:
  selector:
    app: website
  ports:
    - protocol: TCP
      port: 80 # this is what we want, this is the port to target the service
      targetPort: 3000 # this is the port to forward the request to the pod
